[project]
name = "stock-analyzer"
version = "0.1.0"
description = "AI-powered 10-K filing analyzer"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "openai>=1.12.0",
    "llama-index>=0.10.12",
    "llama-index-llms-openai>=0.1.5",
    "llama-index-embeddings-openai>=0.1.6",
    "llama-index-agent-openai>=0.2.0",
    "llama-index-vector-stores-postgres>=0.1.3",
    "sqlalchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "sec-edgar-downloader>=5.0.2",
    "beautifulsoup4>=4.12.2",
    "lxml>=5.1.0",
    "pandas>=2.1.4",
    "numpy>=1.26.2",
    "streamlit>=1.31.0",
    "plotly>=5.18.0",
    "langfuse>=2.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"